bug article text-align center

--- a/src/entries/newsdetail/components/root/index.less
+++ b/src/entries/newsdetail/components/root/index.less
@@ -219,7 +219,7 @@
 				p {
 					font-size: 0.16rem !important;
 					color: #333 !important;
-					text-align: justify !important;
+					//text-align: justify !important;
 					span {
 						font-size: 0.16rem !important;
 						text-align: justify !important;
