--- a/src/entries/newsdetail2/components/root/index.less
+++ b/src/entries/newsdetail2/components/root/index.less
@@ -218,7 +218,7 @@
 				p {
 					font-size: 0.16rem !important;
 					color: #333 !important;
-					text-align: justify !important;
+					//text-align: justify !important;
 					span {
 						font-size: 0.16rem !important;
 						text-align: justify !important;
